Closed
Bug 51928
Opened 25 years ago
Closed 25 years ago
Disk space check doesn't return you to dir selection dialog
Categories
(SeaMonkey :: Installer, defect, P4)
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: samir_bugzilla, Assigned: ssu0262)
Details
(Whiteboard: [nsbeta3+])
Build:
------
2000090808 Win32 Commercial
Steps to reproduce:
-------------------
1> Make sure you have less disk space than required.
2> Run the installer and select enough components to exceed available space.
3> Click ``Next'' on the ``Select Program Folder'' dialog.
4> A dialog indicating you don't have enough disk space pops up.
5> Click ``OK'' to attempt to go back and choose a different directory.
Expected results:
-----------------
Installer takes you back to the ``Setup Type'' dialog so you can select a
different directory.
Actual results:
---------------
Instalelr continues to next dialog -- ``Download Options'' in the case of
commercial.
| Reporter | ||
Comment 1•25 years ago
|
||
Should this be nominated for nsbeta3?
Comment 2•25 years ago
|
||
Is it a Sun Solaris specific bug or a Win32 bug or All?
The description says Win32 Commercial while the category being filed is Sun
Solaris.
Win32 specific. Samir probably filed this bug from a Solaris system.
Updating OS to win32.
Status: NEW → ASSIGNED
OS: Solaris → Windows NT
| Reporter | ||
Comment 4•25 years ago
|
||
Oops. Sorry for the confusion. Thanks for correcting it, Sean. :o)
Moving from SunNT to PCNT ;-)
I think that pressing Back twice gets you to the correct page. see also
bug 52037.
Hardware: Sun → PC
Comment 6•25 years ago
|
||
If you can fix this quickly then do so, otherwise we will release note this if
we have to. There is a workaround (back button) and we did warn people.
I really don't like the idea of ok/cancel, with cancel quitting setup. I think
that will confuse people and make them unhappy. Make it just an OK button that
takes them back to the wizard, where they could then cancel if they wanted.
fixed. cancel button removed as well.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Updated•21 years ago
|
Product: Browser → Seamonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•