fixing bug #51928 - Disk space check doesn't return you to dir selection dialog. and another fix that helps with fixing bugscape bug #2069 - Need appropriate strings for new UI dialogs. r=sgehani.

affects only windows platforms.